sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:7: error: not found: value getNombreValeur
    for(i<-1 to getNombreValeur()-2){
                ^